--- a/client/crypto.ui
+++ b/client/crypto.ui
@@ -6,31 +6,42 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>573</width>
-    <height>273</height>
+    <width>1200</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(85, 170, 127, 255), stop:1 rgba(64, 65, 66, 255));
+font: 14pt &quot;Segoe UI&quot;;</string>
+  </property>
   <widget class="QGraphicsView" name="graphicsView">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>571</width>
-     <height>221</height>
+     <x>10</x>
+     <y>10</y>
+     <width>1181</width>
+     <height>721</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);</string>
    </property>
   </widget>
   <widget class="QPlainTextEdit" name="plainTextEdit">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>230</y>
-     <width>151</width>
-     <height>31</height>
+     <x>30</x>
+     <y>740</y>
+     <width>241</width>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;
+</string>
    </property>
    <property name="plainText">
     <string>Crypto token name</string>
@@ -39,10 +50,10 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>230</y>
-     <width>80</width>
-     <height>24</height>
+     <x>1000</x>
+     <y>740</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -52,10 +63,10 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>230</y>
-     <width>80</width>
-     <height>24</height>
+     <x>1100</x>
+     <y>740</y>
+     <width>81</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -65,10 +76,10 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>230</y>
-     <width>42</width>
-     <height>25</height>
+     <x>870</x>
+     <y>740</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
   </widget>
