--- a/client/login.ui
+++ b/client/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>567</height>
+    <width>1200</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="sizeIncrement">
@@ -20,92 +20,78 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget {
-    background-color: white;
-}
-
-</string>
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(176, 245, 178, 255), stop:0.197183 rgba(158, 246, 164, 255), stop:0.568075 rgba(103, 195, 92, 255), stop:1 rgba(64, 65, 66, 255));
+font: 14pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);
+file:///C:/Pictures/Bilder/Saved Pictures/Satchel on Twitter.png</string>
   </property>
   <widget class="QLabel" name="LoginForm">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>10</y>
-     <width>171</width>
+     <x>500</x>
+     <y>40</y>
+     <width>211</width>
      <height>71</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 22pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">font: 30pt &quot;Segoe UI&quot;;
+background-color: transparent;</string>
    </property>
    <property name="text">
-    <string>      Login</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_username">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>140</y>
-     <width>241</width>
-     <height>31</height>
-    </rect>
+    <string> Login</string>
    </property>
   </widget>
   <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>190</y>
-     <width>71</width>
-     <height>31</height>
+     <x>470</x>
+     <y>300</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
+</string>
    </property>
    <property name="text">
-    <string>Password</string>
+    <string>Password:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_password">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>240</y>
-     <width>241</width>
-     <height>31</height>
+     <x>470</x>
+     <y>360</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+font: 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_to_login2">
-   <property name="geometry">
-    <rect>
-     <x>130</x>
-     <y>350</y>
-     <width>231</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Don’t have an account? </string>
+    <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
   <widget class="QPushButton" name="Register">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>390</y>
-     <width>75</width>
-     <height>24</height>
+     <x>550</x>
+     <y>690</y>
+     <width>111</width>
+     <height>50</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+color: rgb(89, 148, 83);</string>
    </property>
    <property name="text">
     <string> Register</string>
@@ -114,21 +100,21 @@ font: 18pt &quot;Segoe UI&quot;;</string>
   <widget class="QLabel" name="username">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>100</y>
-     <width>61</width>
-     <height>21</height>
+     <x>480</x>
+     <y>160</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
+</string>
    </property>
    <property name="text">
-    <string>Username</string>
+    <string>Username:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_to_login">
@@ -137,21 +123,56 @@ font: 18pt &quot;Segoe UI&quot;;</string>
    </property>
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>280</y>
-     <width>75</width>
-     <height>24</height>
+     <x>550</x>
+     <y>490</y>
+     <width>100</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">background-color: rgb(88, 145, 82);
+color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string>Login</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>610</y>
+     <width>331</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
+</string>
+   </property>
+   <property name="text">
+    <string>Du hast noch kein Konto?</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_password_2">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>220</y>
+     <width>250</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+font: 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
  </widget>
