--- a/client/register.ui
+++ b/client/register.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>531</width>
-    <height>581</height>
+    <width>1200</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,161 +19,197 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="RegisterForm_1">
-   <property name="geometry">
-    <rect>
-     <x>230</x>
-     <y>10</y>
-     <width>201</width>
-     <height>61</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:26pt; vertical-align:sub;&quot;&gt;Register&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-   </property>
-  </widget>
+  <property name="styleSheet">
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(176, 245, 178, 255), stop:0.197183 rgba(158, 246, 164, 255), stop:0.568075 rgba(103, 195, 92, 255), stop:1 rgba(64, 65, 66, 255));
+font: 14pt &quot;Segoe UI&quot;;
+color: rgb(0, 0, 0);</string>
+  </property>
   <widget class="QLabel" name="Username">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>100</y>
-     <width>101</width>
-     <height>31</height>
+     <x>290</x>
+     <y>210</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
 </string>
    </property>
    <property name="text">
-    <string>     Username</string>
+    <string>Username:</string>
    </property>
   </widget>
   <widget class="QLabel" name="Email">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>180</y>
-     <width>111</width>
-     <height>31</height>
+     <x>290</x>
+     <y>310</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
 </string>
    </property>
    <property name="text">
-    <string>     Email</string>
+    <string>Email:</string>
    </property>
   </widget>
   <widget class="QLabel" name="Password">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>259</y>
-     <width>101</width>
-     <height>31</height>
+     <x>290</x>
+     <y>410</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
+</string>
    </property>
    <property name="text">
-    <string>     Password</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_username">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>140</y>
-     <width>281</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_email">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>220</y>
-     <width>281</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEdit_password">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>300</y>
-     <width>281</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="echoMode">
-    <enum>QLineEdit::Password</enum>
+    <string>Password:</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_register">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>330</y>
-     <width>75</width>
-     <height>24</height>
+     <x>640</x>
+     <y>510</y>
+     <width>100</width>
+     <height>50</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget {
-    background-color: pink
-;
-}
-font: 18pt &quot;Segoe UI&quot;;</string>
+    <string notr="true">background-color: rgb(255, 220, 217);
+color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string>Register</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_to_login">
+  <widget class="QLineEdit" name="lineEdit_password_2">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>440</y>
-     <width>171</width>
-     <height>24</height>
+     <x>560</x>
+     <y>210</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Already have an account?</string>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+font: 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_to_login2">
+  <widget class="QLineEdit" name="lineEdit_password_3">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>480</y>
-     <width>101</width>
-     <height>24</height>
+     <x>560</x>
+     <y>410</y>
+     <width>250</width>
+     <height>50</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+font: 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_password_4">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>310</y>
+     <width>250</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(64, 65, 66);
+font: 10pt &quot;Segoe UI&quot;;
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="echoMode">
+    <enum>QLineEdit::EchoMode::Password</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_to_login_2">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>550</x>
+     <y>690</y>
+     <width>100</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(88, 145, 82);
+color: rgb(0, 0, 0);</string>
    </property>
    <property name="text">
     <string>Login</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>610</y>
+     <width>331</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;
+text-decoration: underline;
+font: 16pt &quot;Segoe UI&quot;;
+color:black;
+</string>
+   </property>
+   <property name="text">
+    <string>Du hast bereits ein Konto?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="LoginForm">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>40</y>
+     <width>211</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 30pt &quot;Segoe UI&quot;;
+background-color: transparent;</string>
+   </property>
+   <property name="text">
+    <string>Register</string>
    </property>
   </widget>
  </widget>
