--- a/client/register.ui
+++ b/client/register.ui
@@ -101,7 +101,7 @@ color: rgb(0, 0, 0);</string>
     <string>Register</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_password_2">
+  <widget class="QLineEdit" name="lineEdit_username">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -119,7 +119,7 @@ color: rgb(255, 255, 255);</string>
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_password_3">
+  <widget class="QLineEdit" name="lineEdit_password">
    <property name="geometry">
     <rect>
      <x>560</x>
@@ -137,7 +137,7 @@ color: rgb(255, 255, 255);</string>
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_password_4">
+  <widget class="QLineEdit" name="lineEdit_email">
    <property name="geometry">
     <rect>
      <x>560</x>
